--- a/sass/components/_form-signin.scss
+++ b/sass/components/_form-signin.scss
@@ -1,10 +1,9 @@
-.form-signup {
+.form-signin {
   min-width: 360px;
   padding: 24px 40px;
   background-color: var(--color-grey-0);
   border: 1px solid var(--color-grey-100);
-  border-top-right-radius: var(--border-radius-md);
-  border-bottom-right-radius: var(--border-radius-md);
+  border-radius: var(--border-radius-md);
   overflow: hidden;
   font-size: 14px;
 
