--- a/sass/layout/_section-signup.scss
+++ b/sass/layout/_section-signup.scss
@@ -1,5 +1,6 @@
 .section-signup {
   min-height: 100vh;
+  padding: 24px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -10,5 +11,28 @@
     font-weight: 600;
     text-align: center;
     margin-bottom: 1.5rem;
+  }
+
+  &__layout {
+    display: grid;
+    grid-template-columns: 1fr;
+
+    @media (min-width: 768px) {
+      grid-template-columns: 1fr 1fr;
+    }
+  }
+
+  &__img {
+    display: none;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-top-left-radius: var(--border-radius-md);
+    border-bottom-left-radius: var(--border-radius-md);
+    border: 1px solid var(--color-grey-100);
+
+    @media (min-width: 768px) {
+      display: block;
+    }
   }
 }
