--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,6 +3,9 @@
 @import './layout/container';
 @import './layout/section-signup';
 @import './layout/section-signin';
+@import './layout/section-results';
+@import './layout/section-exam';
 @import './components/btn';
 @import './components/form-signup';
 @import './components/form-signin';
+@import './components/result-box';
