--- a/sass/base/_global.scss
+++ b/sass/base/_global.scss
@@ -26,7 +26,10 @@
   --color-blue-700: #0369a1;
   --color-green-100: #dcfce7;
   --color-green-700: #15803d;
+  --color-green-800: #166534;
   --color-yellow-100: #fef9c3;
+  --color-yellow-500: #f59e0b;
+  --color-yellow-600: #d97706;
   --color-yellow-700: #a16207;
   --color-silver-100: #e5e7eb;
   --color-silver-700: #374151;
