--- a/sass/components/_btn.scss
+++ b/sass/components/_btn.scss
@@ -13,3 +13,11 @@
     background-color: var(--color-brand-700);
   }
 }
+
+.btn--submit {
+  background-color: var(--color-green-700);
+
+  &:hover {
+    background-color: var(--color-green-800);
+  }
+}
